# Blinky-Baremetal-CPP

./: CMakeLists.txt  README.md
APP/Inc/: LED.h  Timer.h  reg.h
APP/Src/: LED.cpp  Timer.cpp  main.cpp
Device/: CMakeLists.txt
cmake-build/: CMakeCache.txt  LED.hex  LED.map  LED.out  Makefile  cmake_install.cmake
